New project set-up
Changed my mind, will use stored procedures instead of Hibernate.

--- a/miniBanking/src/main/resources/application.properties
+++ b/miniBanking/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.database-platform =  org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 
+spring.jackson.serialization.INDENT_OUTPUT=true
+
 security.basic.enabled = false
 management.security.enabled = false
 server.ssl.enabled=false
